@@ -1,8 +1,9 @@
 Revision history for perl distribution Mojo-Redis
 
 3.04 Not Released
- - Documented how pipelining works #7
+ - Add server commands #4
  - Add support for keyspace notifications #10
+ - Documented how pipelining works #7
 
 3.03 2018-07-05T11:45:01+0800
  - Add eval(), evalsha() and script() #8
